<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".signin">

    <ImageView
        android:id="@+id/backbtn1"
        android:layout_width="241dp"
        android:layout_height="195dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/food_image_description"
        android:src="@drawable/food" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="#FDCF53"
        android:textSize="50sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/loginname"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_toStartOf="@+id/icon"
            android:layout_marginTop="6dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="37dp"
            android:layout_height="33dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:src="@drawable/user"
            android:contentDescription="@string/user_icon_description" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/logoinpasswrd"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="9dp"
            android:layout_toStartOf="@+id/icon1"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="34dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/lock"
            android:contentDescription="@string/lock_icon_description" />
    </RelativeLayout>

    <Button
        android:id="@+id/loginbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/login"
        android:background="@drawable/custombtn"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:text="@string/or"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/signuobtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:background="@drawable/custombtn"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>
