<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".signin">
    <ImageView
        android:id="@+id/backimg"
        android:layout_width="36dp"
        android:layout_height="26dp"
        android:layout_marginLeft="-160dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/food_image_description"
        android:src="@drawable/arrow" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="264dp"
        android:layout_height="249dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/food_image_description"
        android:src="@drawable/food" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        android:textColor="#FDCF53"
        android:textSize="50sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/logoutbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="29dp"
        android:padding="0dp"
        android:text="@string/logout"
        android:background="@drawable/custombtn"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:text="@string/or"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/anotherbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/custombtn"
        android:padding="09dp"
        android:text="@string/log_inanother"
        android:textColor="@color/black"
        android:textSize="16sp" />
</LinearLayout>
