<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".signup">

    <ImageView
        android:id="@+id/backimg22"
        android:layout_width="36dp"
        android:layout_height="26dp"
        android:layout_marginLeft="-160dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/food_image_description"
        android:src="@drawable/arrow" />
    <ImageView
        android:id="@+id/img2"
        android:layout_width="241dp"
        android:layout_height="195dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/food_image_description"
        android:src="@drawable/food" />

    <TextView
        android:id="@+id/suptext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/sign_up"
        android:textColor="#FDCF53"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="32dp"
        android:gravity="center">

        <EditText
            android:id="@+id/signupemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />
        <EditText
            android:id="@+id/signupname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="username"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/signupusername1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/signuppasswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray" />


    </LinearLayout>

    <TextView
        android:id="@+id/textredirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="Already a user? login"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signuobtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custombtn"
        android:padding="0dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />
</LinearLayout>
